package LEBOCQTitouan.edu.model.commands.robot.factory;

import LEBOCQTitouan.edu.model.entities.planet.Planet;
import LEBOCQTitouan.edu.model.geography.RobotMapper;

public class RobotCommandFactory {
    private Planet planet;
    private RobotMapper robotMapper;
}
