package LEBOCQTitouan.edu.model.entities;

public class Planet {
}
